Replace MathUtils.clip with Java 21 Math.clamp